# cognitive-symphony

./: .env.example  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_REPORT.md  LAUNCH_CHECKLIST.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  QUICK_START_GITHUB.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  vercel.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.next/: routes-manifest.json
.next/cache/eslint/: .cache_tuavf5
app/api/analytics/: route.ts
app/api/products/: route.ts
app/api/sales/: route.ts
app/dashboard/: page.tsx
app/dashboard/analytics/: page.tsx
cognitive_symphony/: config.py  models.py
cognitive_symphony/agents/: agent_fleet.py  analysis_agent.py  base_agent.py  code_agent.py  creative_agent.py  human_interface_agent.py  optimization_agent.py  research_agent.py  security_agent.py
cognitive_symphony/auth/: dependencies.py  models.py  router.py  service.py
cognitive_symphony/core/: cognitive_symphony.py  meta_orchestrator.py
cognitive_symphony/memory/: memory_system.py
cognitive_symphony/optimization/: self_optimizer.py
cognitive_symphony/synthesis/: adaptive_synthesizer.py
cognitive_symphony/transparency/: transparency_layer.py
docs/: API.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md
examples/: basic_usage.py
prisma/: schema.prisma
tests/: conftest.py  test_agents.py  test_auth.py  test_meta_orchestrator.py
(+6 files in other folders)
