[tool.poetry]
name = "cognitive-symphony"
version = "0.1.0"
description = "Ein selbstoptimierendes Meta-Orchestrations-System für Multi-Agent-KI-Ökosysteme"
authors = ["bullpull02 <bullpull02@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bullpull02/cognitive-symphony"
keywords = ["ai", "multi-agent", "orchestration", "machine-learning", "metakognition"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
